message LoginRequest
{
	required string userid =1;
	required string username = 2;
	required string password = 3;
}
message LoginResponse 
{
	required int32 result = 1;
	optional bytes errorDescription = 2;
}
// 包含所有的 XXXRequest消息
message Request
{
	optional LoginRequest loginRequest = 1;
}
// 包含所有的Response消息
message Response
{
	optional LoginResponse loginResponse = 1;
}
message Message
{
   required string type = 1;
   required fixed32 sequence = 2;
    
   optional Request request = 3;
   optional Response response = 4;
}

